@@ -27,6 +27,7 @@
  */
 package org.hisp.dhis.analytics.table;
 
+import static java.lang.String.format;
 import static java.util.Collections.emptyList;
 import static java.util.stream.Collectors.toList;
 import static org.hisp.dhis.analytics.ColumnDataType.CHARACTER_11;
@@ -56,6 +57,7 @@ import java.util.stream.Collectors;
 
 import lombok.extern.slf4j.Slf4j;
 
+import org.hisp.dhis.analytics.AnalyticsExportSettings;
 import org.hisp.dhis.analytics.AnalyticsTable;
 import org.hisp.dhis.analytics.AnalyticsTableColumn;
 import org.hisp.dhis.analytics.AnalyticsTableHookService;
@@ -70,6 +72,7 @@ import org.hisp.dhis.category.Category;
 import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.common.ValueType;
+import org.hisp.dhis.commons.collection.ListUtils;
 import org.hisp.dhis.dataapproval.DataApprovalLevelService;
 import org.hisp.dhis.dataelement.DataElement;
 import org.hisp.dhis.jdbc.StatementBuilder;
@@ -86,9 +89,6 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.Assert;
-
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
 
 /**
  * @author Lars Helge Overland
@@ -109,14 +109,14 @@ public class JdbcEventAnalyticsTableManager
         SystemSettingManager systemSettingManager, DataApprovalLevelService dataApprovalLevelService,
         ResourceTableService resourceTableService, AnalyticsTableHookService tableHookService,
         StatementBuilder statementBuilder, PartitionManager partitionManager, DatabaseInfo databaseInfo,
-        JdbcTemplate jdbcTemplate )
+        JdbcTemplate jdbcTemplate, AnalyticsExportSettings analyticsExportSettings )
     {
         super( idObjectManager, organisationUnitService, categoryService, systemSettingManager,
             dataApprovalLevelService, resourceTableService, tableHookService, statementBuilder, partitionManager,
-            databaseInfo, jdbcTemplate );
+            databaseInfo, jdbcTemplate, analyticsExportSettings );
     }
 
-    private static final List<AnalyticsTableColumn> FIXED_COLS = ImmutableList.of(
+    private static final List<AnalyticsTableColumn> FIXED_COLS = List.of(
         new AnalyticsTableColumn( quote( "psi" ), CHARACTER_11, NOT_NULL, "psi.uid" ),
         new AnalyticsTableColumn( quote( "pi" ), CHARACTER_11, NOT_NULL, "pi.uid" ),
         new AnalyticsTableColumn( quote( "ps" ), CHARACTER_11, NOT_NULL, "ps.uid" ),
@@ -177,7 +177,7 @@ public class JdbcEventAnalyticsTableManager
     @Transactional
     public List<AnalyticsTable> getAnalyticsTables( AnalyticsTableUpdateParams params )
     {
-        log.info( String.format( "Get tables using earliest: %s, spatial support: %b", params.getFromDate(),
+        log.info( format( "Get tables using earliest: %s, spatial support: %b", params.getFromDate(),
             databaseInfo.isSpatialSupport() ) );
 
         return params.isLatestUpdate() ? getLatestAnalyticsTables( params ) : getRegularAnalyticsTables( params );
@@ -218,12 +218,12 @@ public class JdbcEventAnalyticsTableManager
 
         for ( Program program : programs )
         {
-            List<Integer> dataYears = getDataYears( params, program );
+            List<Integer> dataYears = ListUtils.mutableCopy( getDataYears( params, program ) );
 
             Collections.sort( dataYears );
 
             AnalyticsTable table = new AnalyticsTable( getAnalyticsTableType(), getDimensionColumns( program ),
-                Lists.newArrayList(), program );
+                List.of(), program );
 
             for ( Integer year : dataYears )
             {
@@ -277,17 +277,17 @@ public class JdbcEventAnalyticsTableManager
             if ( hasUpdatedData )
             {
                 AnalyticsTable table = new AnalyticsTable( getAnalyticsTableType(), getDimensionColumns( program ),
-                    Lists.newArrayList(), program );
+                    List.of(), program );
                 table.addPartitionTable( AnalyticsTablePartition.LATEST_PARTITION, startDate, endDate );
                 tables.add( table );
 
-                log.info( String.format(
+                log.info( format(
                     "Added latest event analytics partition for program: '%s' with start: '%s' and end: '%s'",
                     program.getUid(), getLongDateString( startDate ), getLongDateString( endDate ) ) );
             }
             else
             {
-                log.info( String.format(
+                log.info( format(
                     "No updated latest event data found for program: '%s' with start: '%s' and end: '%s",
                     program.getUid(), getLongDateString( lastAnyTableUpdate ), getLongDateString( endDate ) ) );
             }
@@ -334,7 +334,7 @@ public class JdbcEventAnalyticsTableManager
                 "and psi.lastupdated >= '" + getLongDateString( partition.getStartDate() ) + "' " +
                 "and psi.lastupdated < '" + getLongDateString( partition.getEndDate() ) + "')";
 
-            invokeTimeAndLog( sql, String.format( "Remove updated events for table: '%s'", table.getTableName() ) );
+            invokeTimeAndLog( sql, format( "Remove updated events for table: '%s'", table.getTableName() ) );
         }
     }
 
@@ -373,7 +373,7 @@ public class JdbcEventAnalyticsTableManager
             "left join _organisationunitgroupsetstructure ougs on psi.organisationunitid=ougs.organisationunitid " +
             "and (cast(date_trunc('month', " + getDateLinkedToStatus() + ") as date)" +
             "=ougs.startdate or ougs.startdate is null) " +
-            "inner join organisationunit enrollmentou on pi.organisationunitid=enrollmentou.organisationunitid " +
+            "left join organisationunit enrollmentou on pi.organisationunitid=enrollmentou.organisationunitid " +
             "inner join _categorystructure acs on psi.attributeoptioncomboid=acs.categoryoptioncomboid " +
             "left join _dateperiodstructure dps on cast(" + getDateLinkedToStatus() + " as date)=dps.dateperiod " +
             "where psi.lastupdated < '" + getLongDateString( params.getStartTime() ) + "' " + partitionClause +
@@ -562,7 +562,7 @@ public class JdbcEventAnalyticsTableManager
 
     private String selectForInsert( DataElement dataElement, String fromType, String dataClause )
     {
-        return String.format(
+        return format(
             "(select %s from programstageinstance where programstageinstanceid=psi.programstageinstanceid " +
                 dataClause + ")" + getClosingParentheses( fromType ) + " as " + quote( dataElement.getUid() ),
             fromType );
@@ -570,7 +570,7 @@ public class JdbcEventAnalyticsTableManager
 
     private String selectForInsert( TrackedEntityAttribute attribute, String fromType, String dataClause )
     {
-        return String.format( "(select %s" +
+        return format( "(select %s" +
             " from trackedentityattributevalue where trackedentityinstanceid=pi.trackedentityinstanceid " +
             "and trackedentityattributeid=" + attribute.getId() + dataClause + ")" + getClosingParentheses( fromType ) +
             " as " + quote( attribute.getUid() ), fromType );
