@@ -36,7 +36,6 @@ import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -65,15 +64,11 @@ import org.joda.time.DateTime;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import com.google.common.collect.Lists;
-import com.google.common.collect.Sets;
-
 /**
  * @author Lars Helge Overland
  */
 class EventQueryParamsTest extends DhisConvenienceTest
 {
-
     private Option opA;
 
     private Option opB;
@@ -146,16 +141,44 @@ class EventQueryParamsTest extends DhisConvenienceTest
         psB.addDataElement( deB, 1 );
         // Program Stage C
         psC.addDataElement( deA, 0 );
-        prA = createProgram( 'A', Sets.newHashSet( psA ), ouA );
-        prB = createProgram( 'B', Sets.newHashSet( psB ), ouA );
-        prC = createProgram( 'C', Sets.newHashSet( psC ), ouA );
+        prA = createProgram( 'A', Set.of( psA ), ouA );
+        prB = createProgram( 'B', Set.of( psB ), ouA );
+        prC = createProgram( 'C', Set.of( psC ), ouA );
         TrackedEntityAttribute teA = createTrackedEntityAttribute( 'A', ValueType.ORGANISATION_UNIT );
         teA.setUid( deD.getUid() );
         ProgramTrackedEntityAttribute pteA = createProgramTrackedEntityAttribute( prC, teA );
-        prC.setProgramAttributes( Collections.singletonList( pteA ) );
+        prC.setProgramAttributes( List.of( pteA ) );
         peA = new MonthlyPeriodType().createPeriod( new DateTime( 2014, 4, 1, 0, 0 ).toDate() );
         peB = new MonthlyPeriodType().createPeriod( new DateTime( 2014, 5, 1, 0, 0 ).toDate() );
         peC = new MonthlyPeriodType().createPeriod( new DateTime( 2014, 6, 1, 0, 0 ).toDate() );
+    }
+
+    @Test
+    void testHasDimensionValue()
+    {
+        EventQueryParams paramsA = new EventQueryParams.Builder()
+            .withOrganisationUnits( List.of( ouA, ouB ) )
+            .withValue( deA )
+            .build();
+
+        assertTrue( paramsA.hasValueDimension() );
+    }
+
+    @Test
+    void testHasNumericDimensionValue()
+    {
+        EventQueryParams paramsA = new EventQueryParams.Builder()
+            .withOrganisationUnits( List.of( ouA, ouB ) )
+            .withValue( deA )
+            .build();
+
+        EventQueryParams paramsB = new EventQueryParams.Builder()
+            .withOrganisationUnits( List.of( ouA, ouB ) )
+            .withValue( deC )
+            .build();
+
+        assertTrue( paramsA.hasNumericValueDimension() );
+        assertFalse( paramsB.hasNumericValueDimension() );
     }
 
     @Test
@@ -165,15 +188,15 @@ class EventQueryParamsTest extends DhisConvenienceTest
         QueryItem qiB = new QueryItem( deB, null, deB.getValueType(), deB.getAggregationType(), osB );
         EventQueryParams paramsA = new EventQueryParams.Builder()
             .addDimension(
-                new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, Lists.newArrayList( peA, peB, peC ) ) )
+                new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, List.of( peA, peB, peC ) ) )
             .addDimension( new BaseDimensionalObject( ORGUNIT_DIM_ID, DimensionType.ORGANISATION_UNIT,
-                Lists.newArrayList( ouA, ouB ) ) )
+                List.of( ouA, ouB ) ) )
             .addItem( qiA ).addItem( qiB ).build();
         EventQueryParams paramsB = new EventQueryParams.Builder()
             .addDimension(
-                new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, Lists.newArrayList( peA, peB ) ) )
+                new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, List.of( peA, peB ) ) )
             .addDimension( new BaseDimensionalObject( ORGUNIT_DIM_ID, DimensionType.ORGANISATION_UNIT,
-                Lists.newArrayList( ouA ) ) )
+                List.of( ouA ) ) )
             .addItem( qiA ).addItem( qiB ).withGeometryOnly( true ).build();
         assertNotNull( paramsA.getKey() );
         assertEquals( 40, paramsA.getKey().length() );
@@ -187,13 +210,56 @@ class EventQueryParamsTest extends DhisConvenienceTest
     {
         EventQueryParams params = new EventQueryParams.Builder()
             .addDimension(
-                new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, Lists.newArrayList( peA, peB, peC ) ) )
+                new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, List.of( peA, peB, peC ) ) )
             .build();
         assertNull( params.getStartDate() );
         assertNull( params.getEndDate() );
         params = new EventQueryParams.Builder( params ).withStartEndDatesForPeriods().build();
         assertEquals( new DateTime( 2014, 4, 1, 0, 0 ).toDate(), params.getStartDate() );
         assertEquals( new DateTime( 2014, 6, 30, 0, 0 ).toDate(), params.getEndDate() );
+        assertEquals( 3, params.getDateRangeList().size() );
+    }
+
+    @Test
+    void testContinuousDateRangeListGeneratedByReplacingPeriodsWithStartEndDates()
+    {
+        EventQueryParams params = new EventQueryParams.Builder()
+            .addDimension(
+                new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, List.of( peA, peB, peC ) ) )
+            .build();
+
+        params = new EventQueryParams.Builder( params )
+            .withStartEndDatesForPeriods()
+            .build();
+
+        assertEquals( 3, params.getDateRangeList().size() );
+        assertEquals( peA.getStartDate(), params.getDateRangeList().get( 0 ).getStartDate() );
+        assertEquals( peA.getEndDate(), params.getDateRangeList().get( 0 ).getEndDate() );
+        assertEquals( peB.getStartDate(), params.getDateRangeList().get( 1 ).getStartDate() );
+        assertEquals( peB.getEndDate(), params.getDateRangeList().get( 1 ).getEndDate() );
+        assertEquals( peC.getStartDate(), params.getDateRangeList().get( 2 ).getStartDate() );
+        assertEquals( peC.getEndDate(), params.getDateRangeList().get( 2 ).getEndDate() );
+        assertTrue( params.hasContinuousDateRangeList() );
+    }
+
+    @Test
+    void testNonContinuousDateRangeListGeneratedByReplacingPeriodsWithStartEndDates()
+    {
+        EventQueryParams params = new EventQueryParams.Builder()
+            .addDimension(
+                new BaseDimensionalObject( PERIOD_DIM_ID, DimensionType.PERIOD, List.of( peA, peC ) ) )
+            .build();
+
+        params = new EventQueryParams.Builder( params )
+            .withStartEndDatesForPeriods()
+            .build();
+
+        assertEquals( 2, params.getDateRangeList().size() );
+        assertEquals( peA.getStartDate(), params.getDateRangeList().get( 0 ).getStartDate() );
+        assertEquals( peA.getEndDate(), params.getDateRangeList().get( 0 ).getEndDate() );
+        assertEquals( peC.getStartDate(), params.getDateRangeList().get( 1 ).getStartDate() );
+        assertEquals( peC.getEndDate(), params.getDateRangeList().get( 1 ).getEndDate() );
+        assertFalse( params.hasContinuousDateRangeList() );
     }
 
     @Test
@@ -203,8 +269,10 @@ class EventQueryParamsTest extends DhisConvenienceTest
         Legend leB = createLegend( 'B', 1d, 2d );
         LegendSet lsA = createLegendSet( 'A', leA, leB );
         QueryItem qiA = new QueryItem( deA, lsA, deA.getValueType(), deA.getAggregationType(), null );
-        EventQueryParams params = new EventQueryParams.Builder().addItem( qiA ).build();
-        Set<Legend> expected = Sets.newHashSet( leA, leB );
+        EventQueryParams params = new EventQueryParams.Builder()
+            .addItem( qiA )
+            .build();
+        Set<Legend> expected = Set.of( leA, leB );
         assertEquals( expected, params.getItemLegends() );
     }
 
@@ -213,8 +281,11 @@ class EventQueryParamsTest extends DhisConvenienceTest
     {
         QueryItem qiA = new QueryItem( deA, null, deA.getValueType(), deA.getAggregationType(), osA );
         QueryItem qiB = new QueryItem( deB, null, deB.getValueType(), deB.getAggregationType(), osB );
-        EventQueryParams params = new EventQueryParams.Builder().addItem( qiA ).addItem( qiB ).build();
-        Set<Option> expected = Sets.newHashSet( opA, opB, opC, opD );
+        EventQueryParams params = new EventQueryParams.Builder()
+            .addItem( qiA )
+            .addItem( qiB )
+            .build();
+        Set<Option> expected = Set.of( opA, opB, opC, opD );
         assertEquals( expected, params.getItemOptions() );
     }
 
@@ -225,7 +296,11 @@ class EventQueryParamsTest extends DhisConvenienceTest
         QueryItem iB = new QueryItem( createDataElement( 'B', new CategoryCombo() ) );
         QueryItem iC = new QueryItem( createDataElement( 'B', new CategoryCombo() ) );
         QueryItem iD = new QueryItem( createDataElement( 'D', new CategoryCombo() ) );
-        EventQueryParams params = new EventQueryParams.Builder().addItem( iA ).addItem( iB ).addItem( iC ).addItem( iD )
+        EventQueryParams params = new EventQueryParams.Builder()
+            .addItem( iA )
+            .addItem( iB )
+            .addItem( iC )
+            .addItem( iD )
             .build();
         List<QueryItem> duplicates = params.getDuplicateQueryItems();
         assertEquals( 1, duplicates.size() );
@@ -236,13 +311,20 @@ class EventQueryParamsTest extends DhisConvenienceTest
     void testIsTimeFieldValid()
     {
         QueryItem iA = new QueryItem( createDataElement( 'A', new CategoryCombo() ) );
-        EventQueryParams params = new EventQueryParams.Builder().withProgram( prA ).withTimeField( deC.getUid() )
+        EventQueryParams params = new EventQueryParams.Builder()
+            .withProgram( prA )
+            .withTimeField( deC.getUid() )
             .addItem( iA ).build();
         assertTrue( params.timeFieldIsValid() );
-        params = new EventQueryParams.Builder().withProgram( prA ).withTimeField( TimeField.SCHEDULED_DATE.name() )
+        params = new EventQueryParams.Builder()
+            .withProgram( prA )
+            .withTimeField( TimeField.SCHEDULED_DATE.name() )
             .addItem( iA ).build();
         assertTrue( params.timeFieldIsValid() );
-        params = new EventQueryParams.Builder().withProgram( prA ).withTimeField( "someInvalidTimeField" ).addItem( iA )
+        params = new EventQueryParams.Builder()
+            .withProgram( prA )
+            .withTimeField( "someInvalidTimeField" )
+            .addItem( iA )
             .build();
         assertFalse( params.timeFieldIsValid() );
     }
@@ -251,8 +333,11 @@ class EventQueryParamsTest extends DhisConvenienceTest
     void testIsOrgUnitFieldValid()
     {
         QueryItem iA = new QueryItem( createDataElement( 'A', new CategoryCombo() ) );
-        EventQueryParams params = new EventQueryParams.Builder().withProgram( prA )
-            .withOrgUnitField( new OrgUnitField( deD.getUid() ) ).addItem( iA ).build();
+        EventQueryParams params = new EventQueryParams.Builder()
+            .withProgram( prA )
+            .withOrgUnitField( new OrgUnitField( deD.getUid() ) )
+            .addItem( iA )
+            .build();
         assertTrue( params.orgUnitFieldIsValid() );
         params = new EventQueryParams.Builder().withProgram( prA )
             .withOrgUnitField( new OrgUnitField( "someInvalidOrgUnitField" ) ).addItem( iA ).build();
@@ -264,9 +349,12 @@ class EventQueryParamsTest extends DhisConvenienceTest
     {
         QueryItem iA = new QueryItem( createDataElement( 'A', new CategoryCombo() ) );
         ProgramIndicator programIndicatorA = createProgramIndicator( 'A', prA, "", "" );
-        EventQueryParams params = new EventQueryParams.Builder().withProgram( null )
+        EventQueryParams params = new EventQueryParams.Builder()
+            .withProgram( null )
             .withOrgUnitField( new OrgUnitField( deD.getUid() ) )
-            .addItem( iA ).addItemProgramIndicator( programIndicatorA ).build();
+            .addItem( iA )
+            .addItemProgramIndicator( programIndicatorA )
+            .build();
         assertTrue( params.orgUnitFieldIsValid() );
     }
 
@@ -277,9 +365,12 @@ class EventQueryParamsTest extends DhisConvenienceTest
         ProgramIndicator programIndicatorA = createProgramIndicator( 'A', prA, "", "" );
         // this PI has 0 Data Element of type OrgUnit -> test should fail
         ProgramIndicator programIndicatorB = createProgramIndicator( 'B', prB, "", "" );
-        EventQueryParams params = new EventQueryParams.Builder().withProgram( null )
+        EventQueryParams params = new EventQueryParams.Builder()
+            .withProgram( null )
             .withOrgUnitField( new OrgUnitField( deD.getUid() ) )
-            .addItem( iA ).addItemProgramIndicator( programIndicatorA ).addItemProgramIndicator( programIndicatorB )
+            .addItem( iA )
+            .addItemProgramIndicator( programIndicatorA )
+            .addItemProgramIndicator( programIndicatorB )
             .build();
         assertFalse( params.orgUnitFieldIsValid() );
     }
@@ -291,9 +382,12 @@ class EventQueryParamsTest extends DhisConvenienceTest
         // This PI has a Program that has a Tracked Entity Attribute of type Org
         // Unit
         ProgramIndicator programIndicatorA = createProgramIndicator( 'A', prC, "", "" );
-        EventQueryParams params = new EventQueryParams.Builder().withProgram( null )
+        EventQueryParams params = new EventQueryParams.Builder()
+            .withProgram( null )
             .withOrgUnitField( new OrgUnitField( deD.getUid() ) )
-            .addItem( iA ).addItemProgramIndicator( programIndicatorA ).build();
+            .addItem( iA )
+            .addItemProgramIndicator( programIndicatorA )
+            .build();
         assertTrue( params.orgUnitFieldIsValid() );
     }
 }
