@@ -28,24 +28,33 @@
 package org.hisp.dhis.common;
 
 import static com.google.common.base.Preconditions.checkNotNull;
+import static java.util.Objects.requireNonNull;
+import static java.util.stream.Collectors.toList;
+import static org.hisp.dhis.hibernate.HibernateProxyUtils.getRealClass;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Date;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.function.ToLongFunction;
 import java.util.stream.Collectors;
+
+import javax.annotation.CheckForNull;
+import javax.annotation.Nonnull;
 
 import lombok.extern.slf4j.Slf4j;
 
 import org.apache.commons.lang3.StringUtils;
 import org.hibernate.Session;
 import org.hibernate.SessionFactory;
+import org.hibernate.proxy.HibernateProxy;
 import org.hisp.dhis.attribute.Attribute;
 import org.hisp.dhis.attribute.AttributeValue;
 import org.hisp.dhis.cache.Cache;
@@ -58,7 +67,6 @@ import org.hisp.dhis.common.exception.InvalidIdentifierReferenceException;
 import org.hisp.dhis.commons.collection.CollectionUtils;
 import org.hisp.dhis.feedback.ErrorCode;
 import org.hisp.dhis.feedback.ErrorMessage;
-import org.hisp.dhis.hibernate.HibernateProxyUtils;
 import org.hisp.dhis.schema.Schema;
 import org.hisp.dhis.schema.SchemaService;
 import org.hisp.dhis.system.util.ReflectionUtils;
@@ -71,7 +79,6 @@ import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.google.common.base.Defaults;
-import com.google.common.collect.ImmutableMap;
 import com.google.gson.internal.Primitives;
 
 /**
@@ -83,8 +90,7 @@ import com.google.gson.internal.Primitives;
  */
 @Slf4j
 @Component( "org.hisp.dhis.common.IdentifiableObjectManager" )
-public class DefaultIdentifiableObjectManager
-    implements IdentifiableObjectManager
+public class DefaultIdentifiableObjectManager implements IdentifiableObjectManager
 {
     public static final String DEFAULT = "default";
 
@@ -103,9 +109,9 @@ public class DefaultIdentifiableObjectManager
 
     protected final SchemaService schemaService;
 
-    private Map<Class<? extends IdentifiableObject>, IdentifiableObjectStore<? extends IdentifiableObject>> identifiableObjectStoreMap;
+    private final Map<Class<? extends IdentifiableObject>, IdentifiableObjectStore<? extends IdentifiableObject>> identifiableObjectStoreCache = new ConcurrentHashMap<>();
 
-    private Map<Class<? extends DimensionalObject>, GenericDimensionalObjectStore<? extends DimensionalObject>> dimensionalObjectStoreMap;
+    private final Map<Class<? extends DimensionalObject>, GenericDimensionalObjectStore<? extends DimensionalObject>> dimensionalObjectStoreCache = new ConcurrentHashMap<>();
 
     public DefaultIdentifiableObjectManager(
         Set<IdentifiableObjectStore<? extends IdentifiableObject>> identifiableObjectStores,
@@ -134,18 +140,16 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional
-    public void save( IdentifiableObject object )
+    public void save( @Nonnull IdentifiableObject object )
     {
         save( object, true );
     }
 
     @Override
     @Transactional
-    @SuppressWarnings( "unchecked" )
-    public void save( IdentifiableObject object, boolean clearSharing )
+    public void save( @Nonnull IdentifiableObject object, boolean clearSharing )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore(
-            HibernateProxyUtils.getRealClass( object ) );
+        IdentifiableObjectStore<? super IdentifiableObject> store = getIdentifiableObjectStore( object );
 
         if ( store != null )
         {
@@ -155,25 +159,23 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional
-    public void save( List<IdentifiableObject> objects )
+    public void save( @Nonnull List<IdentifiableObject> objects )
     {
         objects.forEach( o -> save( o, true ) );
     }
 
     @Override
     @Transactional
-    public void update( IdentifiableObject object )
+    public void update( @Nonnull IdentifiableObject object )
     {
         update( object, currentUserService.getCurrentUser() );
     }
 
     @Override
     @Transactional
-    @SuppressWarnings( "unchecked" )
-    public void update( IdentifiableObject object, User user )
+    public void update( @Nonnull IdentifiableObject object, @CheckForNull User user )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore(
-            HibernateProxyUtils.getRealClass( object ) );
+        IdentifiableObjectStore<? super IdentifiableObject> store = getIdentifiableObjectStore( object );
 
         if ( store != null )
         {
@@ -183,16 +185,16 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional
-    public void update( List<IdentifiableObject> objects )
+    public void update( @Nonnull List<IdentifiableObject> objects )
     {
         update( objects, currentUserService.getCurrentUser() );
     }
 
     @Override
     @Transactional
-    public void update( List<IdentifiableObject> objects, User user )
+    public void update( @Nonnull List<IdentifiableObject> objects, @CheckForNull User user )
     {
-        if ( objects == null || objects.isEmpty() )
+        if ( objects.isEmpty() )
         {
             return;
         }
@@ -205,7 +207,8 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional
-    public void updateTranslations( IdentifiableObject persistedObject, Set<Translation> translations )
+    public void updateTranslations( @Nonnull IdentifiableObject persistedObject,
+        @Nonnull Set<Translation> translations )
     {
         Session session = sessionFactory.getCurrentSession();
 
@@ -224,18 +227,16 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional
-    public void delete( IdentifiableObject object )
+    public void delete( @Nonnull IdentifiableObject object )
     {
         delete( object, currentUserService.getCurrentUser() );
     }
 
     @Override
     @Transactional
-    @SuppressWarnings( "unchecked" )
-    public void delete( IdentifiableObject object, User user )
+    public void delete( @Nonnull IdentifiableObject object, @CheckForNull User user )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore(
-            HibernateProxyUtils.getRealClass( object ) );
+        IdentifiableObjectStore<? super IdentifiableObject> store = getIdentifiableObjectStore( object );
 
         if ( store != null )
         {
@@ -243,69 +244,66 @@ public class DefaultIdentifiableObjectManager
         }
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    public IdentifiableObject find( String uid )
+    public Optional<? extends IdentifiableObject> find( @Nonnull String uid )
     {
-        for ( IdentifiableObjectStore<? extends IdentifiableObject> store : identifiableObjectStores )
-        {
-            IdentifiableObject object = store.getByUid( uid );
-
-            if ( object != null )
-            {
-                return object;
-            }
-        }
-        return null;
+        return identifiableObjectStores.stream()
+            .map( store -> store.getByUid( uid ) )
+            .filter( Objects::nonNull )
+            .findFirst();
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T get( Class<T> type, long id )
+    public <T extends IdentifiableObject> T get( @Nonnull Class<T> type, long id )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
             return null;
         }
 
-        return (T) store.get( id );
+        return store.get( id );
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T get( Class<T> type, String uid )
+    public <T extends IdentifiableObject> T get( @Nonnull Class<T> type, @Nonnull String uid )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
             return null;
         }
 
-        return (T) store.getByUid( uid );
+        return store.getByUid( uid );
     }
 
+    @Nonnull
     @Override
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T load( Class<T> type, String uid )
+    public <T extends IdentifiableObject> T load( @Nonnull Class<T> type, @Nonnull String uid )
         throws IllegalQueryException
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return null;
+            throw new IllegalQueryException( "No store registered for objects of type: " + type );
         }
 
-        return (T) store.loadByUid( uid );
+        return store.loadByUid( uid );
     }
 
+    @Nonnull
     @Override
-    public <T extends IdentifiableObject> T load( Class<T> type, ErrorCode errorCode, String uid )
+    public <T extends IdentifiableObject> T load( @Nonnull Class<T> type, @Nonnull ErrorCode errorCode,
+        @Nonnull String uid )
         throws IllegalQueryException
     {
         T object = get( type, uid );
@@ -320,136 +318,121 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> boolean exists( Class<T> type, String uid )
+    public <T extends IdentifiableObject> boolean exists( @Nonnull Class<T> type, @Nonnull String uid )
     {
         return get( type, uid ) != null;
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T get( Collection<Class<? extends IdentifiableObject>> types, String uid )
+    public <T extends IdentifiableObject> T get( @Nonnull Collection<Class<? extends T>> types, @Nonnull String uid )
     {
-        for ( Class<? extends IdentifiableObject> type : types )
-        {
-            T object = (T) get( type, uid );
-
-            if ( object != null )
-            {
-                return object;
-            }
-        }
-
-        return null;
+        return types.stream().map( type -> get( type, uid ) )
+            .filter( Objects::nonNull )
+            .findFirst().orElse( null );
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T get( Collection<Class<? extends IdentifiableObject>> types,
-        IdScheme idScheme, String identifier )
+    public <T extends IdentifiableObject> T get( @Nonnull Collection<Class<? extends T>> types,
+        @Nonnull IdScheme idScheme, @Nonnull String identifier )
     {
-        for ( Class<? extends IdentifiableObject> type : types )
-        {
-            T object = (T) getObject( type, idScheme, identifier );
-
-            if ( object != null )
-            {
-                return object;
-            }
-        }
-
-        return null;
+        return types.stream().map( type -> getObject( type, idScheme, identifier ) )
+            .filter( Objects::nonNull )
+            .findFirst().orElse( null );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getNoAcl( Class<T> type, Collection<String> uids )
+    public <T extends IdentifiableObject> List<T> getNoAcl( @Nonnull Class<T> type, @Nonnull Collection<String> uids )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
+
+        if ( store == null )
+        {
+            return List.of();
+        }
+
+        return store.getByUidNoAcl( uids );
+    }
+
+    @CheckForNull
+    @Override
+    @Transactional( readOnly = true )
+    public <T extends IdentifiableObject> T getByCode( @Nonnull Class<T> type, @Nonnull String code )
+    {
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
             return null;
         }
 
-        return (List<T>) store.getByUidNoAcl( uids );
+        return store.getByCode( code );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T getByCode( Class<T> type, String code )
-    {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
-
-        if ( store == null )
-        {
-            return null;
-        }
-
-        return (T) store.getByCode( code );
-    }
-
-    @Override
-    @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T loadByCode( Class<T> type, String code )
+    public <T extends IdentifiableObject> T loadByCode( @Nonnull Class<T> type, @Nonnull String code )
         throws IllegalQueryException
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return null;
+            throw new IllegalQueryException( ErrorCode.E1113, type.getSimpleName(), code );
         }
 
-        return (T) store.loadByCode( code );
+        return store.loadByCode( code );
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T getByName( Class<T> type, String name )
+    public <T extends IdentifiableObject> T getByName( @Nonnull Class<T> type, @Nonnull String name )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
             return null;
         }
 
-        return (T) store.getByName( name );
+        return store.getByName( name );
     }
 
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> T getByUniqueAttributeValue( Class<T> type, Attribute attribute,
-        String value )
+    public <T extends IdentifiableObject> T getByUniqueAttributeValue( @Nonnull Class<T> type,
+        @Nonnull Attribute attribute, @Nonnull String value )
     {
         return getByUniqueAttributeValue( type, attribute, value, currentUserService.getCurrentUser() );
     }
 
-    @SuppressWarnings( "unchecked" )
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> T getByUniqueAttributeValue( Class<T> type, Attribute attribute,
-        String value, User user )
+    public <T extends IdentifiableObject> T getByUniqueAttributeValue( @Nonnull Class<T> type,
+        @Nonnull Attribute attribute, @Nonnull String value, User user )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
             return null;
         }
 
-        return (T) store.getByUniqueAttributeValue( attribute, value, user );
+        return store.getByUniqueAttributeValue( attribute, value, user );
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> T search( Class<T> type, String query )
+    public <T extends IdentifiableObject> T search( @Nonnull Class<T> type, @Nonnull String query )
     {
         T object = get( type, query );
 
@@ -466,9 +449,10 @@ public class DefaultIdentifiableObjectManager
         return object;
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> List<T> filter( Class<T> type, String query )
+    public <T extends IdentifiableObject> List<T> filter( @Nonnull Class<T> type, @Nonnull String query )
     {
         Set<T> uniqueObjects = new HashSet<>();
 
@@ -495,111 +479,115 @@ public class DefaultIdentifiableObjectManager
         return objects;
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getAll( Class<T> type )
+    public <T extends IdentifiableObject> List<T> getAll( @Nonnull Class<T> type )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getAll();
+        return store.getAll();
     }
 
+    @Nonnull
     @Override
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getDataWriteAll( Class<T> type )
+    @Transactional( readOnly = true )
+    public <T extends IdentifiableObject> List<T> getDataWriteAll( @Nonnull Class<T> type )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getDataWriteAll();
+        return store.getDataWriteAll();
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getDataReadAll( Class<T> type )
+    public <T extends IdentifiableObject> List<T> getDataReadAll( @Nonnull Class<T> type )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getDataReadAll();
+        return store.getDataReadAll();
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getAllSorted( Class<T> type )
+    public <T extends IdentifiableObject> List<T> getAllSorted( @Nonnull Class<T> type )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getAllOrderedName();
+        return store.getAllOrderedName();
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getAllByAttributes( Class<T> type, List<Attribute> attributes )
+    public <T extends IdentifiableObject> List<T> getAllByAttributes( @Nonnull Class<T> type,
+        @Nonnull List<Attribute> attributes )
     {
         Schema schema = schemaService.getDynamicSchema( type );
 
         if ( schema == null || !schema.havePersistedProperty( "attributeValues" ) || attributes.isEmpty() )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getAllByAttributes( attributes );
+        return store.getAllByAttributes( attributes );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> List<AttributeValue> getAllValuesByAttributes( Class<T> type,
-        List<Attribute> attributes )
+    public <T extends IdentifiableObject> List<AttributeValue> getAllValuesByAttributes( @Nonnull Class<T> type,
+        @Nonnull List<Attribute> attributes )
     {
         Schema schema = schemaService.getDynamicSchema( type );
 
         if ( schema == null || !schema.havePersistedProperty( "attributeValues" ) || attributes.isEmpty() )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
         return store.getAllValuesByAttributes( attributes );
     }
 
     @Override
-    public <T extends IdentifiableObject> long countAllValuesByAttributes( Class<T> type, List<Attribute> attributes )
+    public <T extends IdentifiableObject> long countAllValuesByAttributes( @Nonnull Class<T> type,
+        @Nonnull List<Attribute> attributes )
     {
         Schema schema = schemaService.getDynamicSchema( type );
 
@@ -608,7 +596,7 @@ public class DefaultIdentifiableObjectManager
             return 0;
         }
 
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
@@ -618,45 +606,46 @@ public class DefaultIdentifiableObjectManager
         return store.countAllValuesByAttributes( attributes );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getByUid( Class<T> type, Collection<String> uids )
+    public <T extends IdentifiableObject> List<T> getByUid( @Nonnull Class<T> type, @Nonnull Collection<String> uids )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getByUid( uids );
+        return store.getByUid( uids );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getByUid( Collection<Class<? extends IdentifiableObject>> types,
-        Collection<String> uids )
+    public <T extends IdentifiableObject> List<T> getByUid( Collection<Class<? extends T>> types,
+        @Nonnull Collection<String> uids )
     {
         List<T> list = new ArrayList<>();
 
-        for ( Class<? extends IdentifiableObject> type : types )
+        for ( Class<? extends T> type : types )
         {
-            list.addAll( (List<T>) getByUid( type, uids ) );
+            list.addAll( getByUid( type, uids ) );
         }
-
         return list;
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> List<T> loadByUid( Class<T> type, Collection<String> uids )
+    public <T extends IdentifiableObject> List<T> loadByUid( @Nonnull Class<T> type,
+        @CheckForNull Collection<String> uids )
         throws IllegalQueryException
     {
-        if ( uids == null )
+        if ( uids == null || uids.isEmpty() )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
         List<T> objects = getByUid( type, uids );
@@ -673,93 +662,72 @@ public class DefaultIdentifiableObjectManager
         return objects;
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getById( Class<T> type, Collection<Long> ids )
+    public <T extends IdentifiableObject> List<T> getById( @Nonnull Class<T> type, @Nonnull Collection<Long> ids )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return null;
+            return List.of();
         }
 
-        return (List<T>) store.getById( ids );
+        return store.getById( ids );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getByCode( Class<T> type, Collection<String> codes )
+    public <T extends IdentifiableObject> List<T> getByCode( @Nonnull Class<T> type, @Nonnull Collection<String> codes )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getByCode( codes );
+        return store.getByCode( codes );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> List<T> getOrdered( Class<T> type, IdScheme idScheme,
-        Collection<String> values )
+    public <T extends IdentifiableObject> List<T> getOrdered( @Nonnull Class<T> type, @Nonnull IdScheme idScheme,
+        @Nonnull Collection<String> values )
     {
-        if ( values == null )
+        if ( values.isEmpty() )
         {
-            return new ArrayList<>();
+            return List.of();
         }
-
-        List<T> list = new ArrayList<>();
-
-        for ( String value : values )
-        {
-            T object = getObject( type, idScheme, value );
-
-            if ( object != null )
-            {
-                list.add( object );
-            }
-        }
-
-        return list;
+        return values.stream().map( value -> getObject( type, idScheme, value ) )
+            .filter( Objects::nonNull )
+            .collect( toList() );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getByUidOrdered( Class<T> type, List<String> uids )
+    public <T extends IdentifiableObject> List<T> getByUidOrdered( @Nonnull Class<T> type, @Nonnull List<String> uids )
     {
-        IdentifiableObjectStore<T> store = (IdentifiableObjectStore<T>) getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
-        if ( store == null || uids == null )
+        if ( store == null || uids.isEmpty() )
         {
-            return new ArrayList<>();
+            return List.of();
         }
-
-        List<T> list = new ArrayList<>();
-
-        for ( String uid : uids )
-        {
-            T object = store.getByUid( uid );
-
-            if ( object != null )
-            {
-                list.add( object );
-            }
-        }
-
-        return list;
+        return uids.stream().map( store::getByUid )
+            .filter( Objects::nonNull )
+            .collect( toList() );
     }
 
     @Override
     @Transactional
-    public <T extends IdentifiableObject> int getCount( Class<T> type )
+    public <T extends IdentifiableObject> int getCount( @Nonnull Class<T> type )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store != null )
         {
@@ -771,9 +739,9 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> int getCountByCreated( Class<T> type, Date created )
+    public <T extends IdentifiableObject> int getCountByCreated( @Nonnull Class<T> type, @Nonnull Date created )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store != null )
         {
@@ -785,9 +753,9 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> int getCountByLastUpdated( Class<T> type, Date lastUpdated )
+    public <T extends IdentifiableObject> int getCountByLastUpdated( @Nonnull Class<T> type, @Nonnull Date lastUpdated )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store != null )
         {
@@ -797,72 +765,74 @@ public class DefaultIdentifiableObjectManager
         return 0;
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getLikeName( Class<T> type, String name )
+    public <T extends IdentifiableObject> List<T> getLikeName( @Nonnull Class<T> type, @Nonnull String name )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getAllLikeName( name );
+        return store.getAllLikeName( name );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getLikeName( Class<T> type, String name, boolean caseSensitive )
+    public <T extends IdentifiableObject> List<T> getLikeName( @Nonnull Class<T> type, @Nonnull String name,
+        boolean caseSensitive )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getAllLikeName( name, caseSensitive );
+        return store.getAllLikeName( name, caseSensitive );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getBetweenSorted( Class<T> type, int first, int max )
+    public <T extends IdentifiableObject> List<T> getBetweenSorted( @Nonnull Class<T> type, int first, int max )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getAllOrderedName( first, max );
+        return store.getAllOrderedName( first, max );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getBetweenLikeName( Class<T> type, Set<String> words, int first,
+    public <T extends IdentifiableObject> List<T> getBetweenLikeName( @Nonnull Class<T> type,
+        @Nonnull Set<String> words, int first,
         int max )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getAllLikeName( words, first, max );
+        return store.getAllLikeName( words, first, max );
     }
 
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> Date getLastUpdated( Class<T> type )
+    public <T extends IdentifiableObject> Date getLastUpdated( @Nonnull Class<T> type )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
@@ -872,25 +842,25 @@ public class DefaultIdentifiableObjectManager
         return store.getLastUpdated();
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> Map<String, T> getIdMap( Class<T> type, IdentifiableProperty property )
+    public <T extends IdentifiableObject> Map<String, T> getIdMap( @Nonnull Class<T> type,
+        @Nonnull IdentifiableProperty property )
     {
         return getIdMap( type, IdScheme.from( property ) );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> Map<String, T> getIdMap( Class<T> type, IdScheme idScheme )
+    public <T extends IdentifiableObject> Map<String, T> getIdMap( @Nonnull Class<T> type, @Nonnull IdScheme idScheme )
     {
-        IdentifiableObjectStore<T> store = (IdentifiableObjectStore<T>) getIdentifiableObjectStore( type );
-
-        Map<String, T> map = new HashMap<>();
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return map;
+            return Map.of();
         }
 
         List<T> objects = store.getAll();
@@ -898,25 +868,26 @@ public class DefaultIdentifiableObjectManager
         return IdentifiableObjectUtils.getIdMap( objects, idScheme );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> Map<String, T> getIdMapNoAcl( Class<T> type, IdentifiableProperty property )
+    public <T extends IdentifiableObject> Map<String, T> getIdMapNoAcl( @Nonnull Class<T> type,
+        @Nonnull IdentifiableProperty property )
     {
         return getIdMapNoAcl( type, IdScheme.from( property ) );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> Map<String, T> getIdMapNoAcl( Class<T> type, IdScheme idScheme )
+    public <T extends IdentifiableObject> Map<String, T> getIdMapNoAcl( @Nonnull Class<T> type,
+        @Nonnull IdScheme idScheme )
     {
-        IdentifiableObjectStore<T> store = (IdentifiableObjectStore<T>) getIdentifiableObjectStore( type );
-
-        Map<String, T> map = new HashMap<>();
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return map;
+            return Map.of();
         }
 
         List<T> objects = store.getAllNoAcl();
@@ -924,112 +895,105 @@ public class DefaultIdentifiableObjectManager
         return IdentifiableObjectUtils.getIdMap( objects, idScheme );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getObjects( Class<T> type, IdentifiableProperty property,
-        Collection<String> identifiers )
+    public <T extends IdentifiableObject> List<T> getObjects( @Nonnull Class<T> type,
+        @Nonnull IdentifiableProperty property, @Nonnull Collection<String> identifiers )
     {
-        IdentifiableObjectStore<T> store = (IdentifiableObjectStore<T>) getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
-        if ( store == null )
+        if ( store == null || identifiers.isEmpty() )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        if ( identifiers != null && !identifiers.isEmpty() )
+        switch ( property )
         {
-            if ( property == null || IdentifiableProperty.UID.equals( property ) )
-            {
-                return store.getByUid( identifiers );
-            }
-            else if ( IdentifiableProperty.CODE.equals( property ) )
-            {
-                return store.getByCode( identifiers );
-            }
-            else if ( IdentifiableProperty.NAME.equals( property ) )
-            {
-                return store.getByName( identifiers );
-            }
-
+        case UID:
+            return store.getByUid( identifiers );
+        case CODE:
+            return store.getByCode( identifiers );
+        case NAME:
+            return store.getByName( identifiers );
+        default:
             throw new InvalidIdentifierReferenceException(
                 "Invalid identifiable property / class combination: " + property );
         }
-
-        return new ArrayList<>();
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getObjects( Class<T> type, Collection<Long> identifiers )
+    public <T extends IdentifiableObject> List<T> getObjects( @Nonnull Class<T> type,
+        @Nonnull Collection<Long> identifiers )
     {
-        IdentifiableObjectStore<T> store = (IdentifiableObjectStore<T>) getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
         return store.getById( identifiers );
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> T getObject( Class<T> type, IdentifiableProperty property, String value )
+    public <T extends IdentifiableObject> T getObject( @Nonnull Class<T> type, @Nonnull IdentifiableProperty property,
+        @Nonnull String value )
     {
         return getObject( type, IdScheme.from( property ), value );
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T getObject( Class<T> type, IdScheme idScheme, String value )
+    public <T extends IdentifiableObject> T getObject( @Nonnull Class<T> type, @Nonnull IdScheme idScheme,
+        @Nonnull String value )
     {
-        IdentifiableObjectStore<T> store = (IdentifiableObjectStore<T>) getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
-        if ( store == null )
+        if ( store == null || StringUtils.isEmpty( value ) )
         {
             return null;
         }
 
-        if ( !StringUtils.isEmpty( value ) )
+        if ( idScheme.isNull() || idScheme.is( IdentifiableProperty.UID ) )
         {
-            if ( idScheme.isNull() || idScheme.is( IdentifiableProperty.UID ) )
+            return store.getByUid( value );
+        }
+        if ( idScheme.is( IdentifiableProperty.CODE ) )
+        {
+            return store.getByCode( value );
+        }
+        if ( idScheme.is( IdentifiableProperty.NAME ) )
+        {
+            return store.getByName( value );
+        }
+        if ( idScheme.is( IdentifiableProperty.ATTRIBUTE ) )
+        {
+            Attribute attribute = get( Attribute.class, idScheme.getAttribute() );
+            if ( attribute == null )
             {
-                return store.getByUid( value );
+                throw new InvalidIdentifierReferenceException( "Attribute does not exist: " + idScheme.getAttribute() );
             }
-            else if ( idScheme.is( IdentifiableProperty.CODE ) )
-            {
-                return store.getByCode( value );
-            }
-            else if ( idScheme.is( IdentifiableProperty.NAME ) )
-            {
-                return store.getByName( value );
-            }
-            else if ( idScheme.is( IdentifiableProperty.ATTRIBUTE ) )
-            {
-                Attribute attribute = get( Attribute.class, idScheme.getAttribute() );
-                return store.getByUniqueAttributeValue( attribute, value );
-            }
-            else if ( idScheme.is( IdentifiableProperty.ID ) )
-            {
-                if ( Integer.valueOf( value ) > 0 )
-                {
-                    return store.get( Integer.valueOf( value ) );
-                }
-            }
-
-            throw new InvalidIdentifierReferenceException(
-                "Invalid identifiable property / class combination: " + idScheme );
+            return store.getByUniqueAttributeValue( attribute, value );
+        }
+        if ( idScheme.is( IdentifiableProperty.ID ) && Integer.parseInt( value ) > 0 )
+        {
+            return store.get( Integer.parseInt( value ) );
         }
 
-        return null;
+        throw new InvalidIdentifierReferenceException(
+            "Invalid identifiable property / class combination: " + idScheme );
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    public IdentifiableObject getObject( String uid, String simpleClassName )
+    public IdentifiableObject getObject( @Nonnull String uid, @Nonnull String simpleClassName )
     {
         for ( IdentifiableObjectStore<? extends IdentifiableObject> objectStore : identifiableObjectStores )
         {
@@ -1042,9 +1006,10 @@ public class DefaultIdentifiableObjectManager
         return null;
     }
 
+    @CheckForNull
     @Override
     @Transactional( readOnly = true )
-    public IdentifiableObject getObject( long id, String simpleClassName )
+    public IdentifiableObject getObject( long id, @Nonnull String simpleClassName )
     {
         for ( IdentifiableObjectStore<? extends IdentifiableObject> objectStore : identifiableObjectStores )
         {
@@ -1059,20 +1024,15 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional
-    public void refresh( Object object )
+    public void refresh( @Nonnull Object object )
     {
         sessionFactory.getCurrentSession().refresh( object );
     }
 
     @Override
-    public void resetNonOwnerProperties( Object object )
+    public void resetNonOwnerProperties( @Nonnull Object object )
     {
-        if ( object == null )
-        {
-            return;
-        }
-
-        Schema schema = schemaService.getDynamicSchema( object.getClass() );
+        Schema schema = schemaService.getDynamicSchema( getRealClass( object ) );
 
         schema.getProperties()
             .stream()
@@ -1116,33 +1076,30 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional
-    public void evict( Object object )
+    public void evict( @Nonnull Object object )
     {
         sessionFactory.getCurrentSession().evict( object );
     }
 
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> T getNoAcl( Class<T> type, String uid )
+    public <T extends IdentifiableObject> T getNoAcl( @Nonnull Class<T> type, @Nonnull String uid )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
             return null;
         }
 
-        return (T) store.getByUidNoAcl( uid );
+        return store.getByUidNoAcl( uid );
     }
 
     @Override
     @Transactional
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> void updateNoAcl( T object )
+    public <T extends IdentifiableObject> void updateNoAcl( @Nonnull T object )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore(
-            HibernateProxyUtils.getRealClass( object ) );
+        IdentifiableObjectStore<? super T> store = getIdentifiableObjectStore( object );
 
         if ( store != null )
         {
@@ -1150,133 +1107,134 @@ public class DefaultIdentifiableObjectManager
         }
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getAllNoAcl( Class<T> type )
+    public <T extends IdentifiableObject> List<T> getAllNoAcl( @Nonnull Class<T> type )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getAllNoAcl();
+        return store.getAllNoAcl();
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends DimensionalObject> List<T> getDataDimensions( Class<T> type )
+    public <T extends DimensionalObject> List<T> getDataDimensions( @Nonnull Class<T> type )
     {
-        GenericDimensionalObjectStore<DimensionalObject> store = getDimensionalObjectStore( type );
+        GenericDimensionalObjectStore<T> store = getDimensionalObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getByDataDimension( true );
+        return store.getByDataDimension( true );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends DimensionalObject> List<T> getDataDimensionsNoAcl( Class<T> type )
+    public <T extends DimensionalObject> List<T> getDataDimensionsNoAcl( @Nonnull Class<T> type )
     {
-        GenericDimensionalObjectStore<DimensionalObject> store = getDimensionalObjectStore( type );
+        GenericDimensionalObjectStore<T> store = getDimensionalObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
-        return (List<T>) store.getByDataDimensionNoAcl( true );
+        return store.getByDataDimensionNoAcl( true );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    @SuppressWarnings( "unchecked" )
-    public <T extends IdentifiableObject> List<T> getByAttributeAndValue( Class<T> type, Attribute attribute,
-        String value )
+    public <T extends IdentifiableObject> List<T> getByAttributeAndValue( @Nonnull Class<T> type,
+        @Nonnull Attribute attribute,
+        @Nonnull String value )
     {
         Schema schema = schemaService.getDynamicSchema( type );
 
         if ( schema == null || !schema.havePersistedProperty( "attributeValues" ) )
         {
-            return null;
+            return List.of();
         }
 
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return null;
+            return List.of();
         }
 
-        return (List<T>) store.getByAttributeAndValue( attribute, value );
+        return store.getByAttributeAndValue( attribute, value );
     }
 
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> boolean isAttributeValueUnique( Class<? extends IdentifiableObject> type,
-        T object, AttributeValue attributeValue )
+    public <T extends IdentifiableObject> boolean isAttributeValueUnique( @Nonnull Class<T> type,
+        @Nonnull T object, @Nonnull AttributeValue attributeValue )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
         return store != null && store.isAttributeValueUnique( object, attributeValue );
     }
 
     @Override
     @Transactional( readOnly = true )
-    public <T extends IdentifiableObject> boolean isAttributeValueUnique( Class<? extends IdentifiableObject> type,
-        T object, Attribute attribute, String value )
+    public <T extends IdentifiableObject> boolean isAttributeValueUnique( @Nonnull Class<T> type,
+        @Nonnull T object, @Nonnull Attribute attribute, @Nonnull String value )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
         return store != null && store.isAttributeValueUnique( object, attribute, value );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    public List<? extends IdentifiableObject> getAllByAttributeAndValues( Class<? extends IdentifiableObject> type,
-        Attribute attribute, List<String> values )
+    public <T extends IdentifiableObject> List<T> getAllByAttributeAndValues( @Nonnull Class<T> type,
+        @Nonnull Attribute attribute, @Nonnull List<String> values )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
-        return store != null ? store.getAllByAttributeAndValues( attribute, values ) : Collections.emptyList();
+        IdentifiableObjectStore<T> store = getIdentifiableObjectStore( type );
+        return store != null ? store.getAllByAttributeAndValues( attribute, values ) : List.of();
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
     public Map<Class<? extends IdentifiableObject>, IdentifiableObject> getDefaults()
     {
-        Long catId = defaultObjectCache.get( Category.class.getName(),
-            key -> getByName( Category.class, DEFAULT ).getId() );
-        Long cateComboId = defaultObjectCache.get( CategoryCombo.class.getName(),
-            key -> getByName( CategoryCombo.class, DEFAULT ).getId() );
-        Long catOptionId = defaultObjectCache.get( CategoryOption.class.getName(),
-            key -> getByName( CategoryOption.class, DEFAULT ).getId() );
-        Long catOptionComboId = defaultObjectCache.get(
-            CategoryOptionCombo.class.getName(),
-            key -> getByName( CategoryOptionCombo.class, DEFAULT ).getId() );
+        ToLongFunction<Class<? extends IdentifiableObject>> getIdCachedByName = type -> defaultObjectCache
+            .get( type.getName(), t -> {
+                IdentifiableObject obj = getByName( type, "default" );
+                return obj == null ? -1 : obj.getId();
+            } );
 
-        return new ImmutableMap.Builder<Class<? extends IdentifiableObject>, IdentifiableObject>()
-            .put( Category.class, Objects.requireNonNull( get( Category.class, catId ) ) )
-            .put( CategoryCombo.class, Objects.requireNonNull( get( CategoryCombo.class, cateComboId ) ) )
-            .put( CategoryOption.class, Objects.requireNonNull( get( CategoryOption.class, catOptionId ) ) )
-            .put( CategoryOptionCombo.class,
-                Objects.requireNonNull( get( CategoryOptionCombo.class, catOptionComboId ) ) )
-            .build();
+        return Map.of(
+            Category.class, requireNonNull( get( Category.class, getIdCachedByName.applyAsLong( Category.class ) ) ),
+            CategoryCombo.class,
+            requireNonNull( get( CategoryCombo.class, getIdCachedByName.applyAsLong( CategoryCombo.class ) ) ),
+            CategoryOption.class,
+            requireNonNull( get( CategoryOption.class, getIdCachedByName.applyAsLong( CategoryOption.class ) ) ),
+            CategoryOptionCombo.class, requireNonNull( get( CategoryOptionCombo.class,
+                getIdCachedByName.applyAsLong( CategoryOptionCombo.class ) ) ) );
     }
 
+    @Nonnull
     @Override
     @Transactional( readOnly = true )
-    public List<String> getUidsCreatedBefore( Class<? extends IdentifiableObject> type, Date date )
+    public List<String> getUidsCreatedBefore( @Nonnull Class<? extends IdentifiableObject> type, @Nonnull Date date )
     {
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( type );
+        IdentifiableObjectStore<?> store = getIdentifiableObjectStore( type );
 
         if ( store == null )
         {
-            return new ArrayList<>();
+            return List.of();
         }
 
         return store.getUidsCreatedBefore( date );
@@ -1288,16 +1246,11 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional( readOnly = true )
-    public boolean isDefault( IdentifiableObject object )
+    public boolean isDefault( @Nonnull IdentifiableObject object )
     {
         Map<Class<? extends IdentifiableObject>, IdentifiableObject> defaults = getDefaults();
 
-        if ( object == null )
-        {
-            return false;
-        }
-
-        Class<?> realClass = HibernateProxyUtils.getRealClass( object );
+        Class<?> realClass = getRealClass( object );
 
         if ( !defaults.containsKey( realClass ) )
         {
@@ -1311,76 +1264,52 @@ public class DefaultIdentifiableObjectManager
 
     @Override
     @Transactional
-    public void removeUserGroupFromSharing( String userGroupUid )
+    public void removeUserGroupFromSharing( @Nonnull String userGroupUid )
     {
-        List<Schema> schemas = schemaService.getSchemas().stream().filter( s -> s.isShareable() ).collect(
-            Collectors.toList() );
+        List<Schema> schemas = schemaService.getSchemas().stream().filter( Schema::isShareable ).collect(
+            toList() );
 
-        IdentifiableObjectStore<IdentifiableObject> store = getIdentifiableObjectStore( UserGroup.class );
+        IdentifiableObjectStore<?> store = getIdentifiableObjectStore( UserGroup.class );
         schemas.forEach( schema -> store.removeUserGroupFromSharing( userGroupUid, schema.getTableName() ) );
     }
 
     @SuppressWarnings( "unchecked" )
-    private <T extends IdentifiableObject> IdentifiableObjectStore<IdentifiableObject> getIdentifiableObjectStore(
-        Class<T> type )
+    private <T extends IdentifiableObject> IdentifiableObjectStore<T> getIdentifiableObjectStore( @Nonnull T object )
     {
-        initMaps();
-
-        IdentifiableObjectStore<? extends IdentifiableObject> store = identifiableObjectStoreMap.get( type );
-
-        if ( store == null )
-        {
-            store = identifiableObjectStoreMap.get( type.getSuperclass() );
-
-            if ( store == null )
-            {
-                log.debug( "No IdentifiableObjectStore found for class: '{}'", type );
-            }
-        }
-
-        return (IdentifiableObjectStore<IdentifiableObject>) store;
+        return getIdentifiableObjectStore( (Class<T>) getRealClass( object ) );
     }
 
     @SuppressWarnings( "unchecked" )
-    private <T extends DimensionalObject> GenericDimensionalObjectStore<DimensionalObject> getDimensionalObjectStore(
-        Class<T> type )
+    private <T extends IdentifiableObject> IdentifiableObjectStore<T> getIdentifiableObjectStore(
+        @Nonnull Class<T> type )
     {
-        initMaps();
+        return (IdentifiableObjectStore<T>) getObjectStore( type, identifiableObjectStoreCache,
+            identifiableObjectStores );
+    }
 
-        GenericDimensionalObjectStore<? extends DimensionalObject> store = dimensionalObjectStoreMap.get( type );
+    @SuppressWarnings( "unchecked" )
+    private <T extends DimensionalObject> GenericDimensionalObjectStore<T> getDimensionalObjectStore(
+        @Nonnull Class<T> type )
+    {
+        return (GenericDimensionalObjectStore<T>) getObjectStore( type, dimensionalObjectStoreCache,
+            dimensionalObjectStores );
+    }
 
-        if ( store == null )
-        {
-            store = dimensionalObjectStoreMap.get( type.getSuperclass() );
-
+    private <T extends E, E extends IdentifiableObject, S extends IdentifiableObjectStore<? extends E>> S getObjectStore(
+        Class<T> type, Map<Class<? extends E>, S> cache, Set<S> stores )
+    {
+        @SuppressWarnings( "unchecked" )
+        Class<T> realType = HibernateProxy.class.isAssignableFrom( type ) ? (Class<T>) type.getSuperclass() : type;
+        return cache.computeIfAbsent( realType, key -> {
+            S store = stores.stream().filter( s -> s.getClazz() == key ).findFirst().orElse( null );
             if ( store == null )
             {
-                log.debug( "No DimensionalObjectStore found for class: '{}'", type );
+                // as this is within the "loader" function this will only get
+                // logged once
+                log.warn( "No IdentifiableObjectStore found for class: '{}'", realType );
             }
-        }
-
-        return (GenericDimensionalObjectStore<DimensionalObject>) store;
+            return store;
+        } );
     }
 
-    private void initMaps()
-    {
-        if ( identifiableObjectStoreMap != null )
-        {
-            return; // Already initialized
-        }
-
-        identifiableObjectStoreMap = new HashMap<>();
-
-        for ( IdentifiableObjectStore<? extends IdentifiableObject> store : identifiableObjectStores )
-        {
-            identifiableObjectStoreMap.put( store.getClazz(), store );
-        }
-
-        dimensionalObjectStoreMap = new HashMap<>();
-
-        for ( GenericDimensionalObjectStore<? extends DimensionalObject> store : dimensionalObjectStores )
-        {
-            dimensionalObjectStoreMap.put( store.getClazz(), store );
-        }
-    }
 }
